--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-watch": "^7.0.0",
     "npm-run-all": "^4.1.5",
-    "snowpack": "^3.0.11"
+    "posthtml-include": "^1.6.2",
+    "snowpack": "^3.0.11",
+    "snowpack-plugin-posthtml": "^0.1.0"
   },
   "dependencies": {
     "regenerator-runtime": "^0.13.7",
